[gd_scene load_steps=5 format=3 uid="uid://b8j2vkq2x8gfg"]

[ext_resource type="Script" path="res://scripts/characters/Player.gd" id="1_0p5y7"]
[ext_resource type="Texture2D" uid="uid://bi5rqwpixjmwo" path="res://assets/characters/32rogues/32rogues/rogues.png" id="2_5r8cg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2"]
radius = 16.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 1
collision_mask = 14
script = ExtResource("1_0p5y7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_5r8cg")
hframes = 8
vframes = 8
frame = 0

[node name="VisibilityHelper" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
color = Color(1.0, 1.0, 0.0, 0.5)
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = -30.0
value = 100.0
max_value = 100.0

[node name="PlayerName" type="Label" parent="."]
offset_left = -20.0
offset_top = -50.0
offset_right = 20.0
offset_bottom = -40.0
text = "Player"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="AttackShape" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_1")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 1
collision_mask = 4

[node name="HurtShape" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_2")

[node name="AbilityCooldowns" type="Node" parent="."]

[node name="Ability1Timer" type="Timer" parent="AbilityCooldowns"]
wait_time = 2.0
one_shot = true

[node name="Ability2Timer" type="Timer" parent="AbilityCooldowns"]
wait_time = 3.0
one_shot = true

[node name="Ability3Timer" type="Timer" parent="AbilityCooldowns"]
wait_time = 8.0
one_shot = true

[node name="DashTimer" type="Timer" parent="AbilityCooldowns"]
wait_time = 1.0
one_shot = true

[node name="StateManager" type="Node" parent="."]

[node name="InvincibilityTimer" type="Timer" parent="StateManager"]
wait_time = 0.5
one_shot = true

[node name="StatusEffects" type="Node" parent="."]

[node name="AudioManager" type="Node" parent="."]

[node name="MovementAudio" type="AudioStreamPlayer2D" parent="AudioManager"]

[node name="AttackAudio" type="AudioStreamPlayer2D" parent="AudioManager"]

[node name="HurtAudio" type="AudioStreamPlayer2D" parent="AudioManager"]

[node name="Camera2D" type="Camera2D" parent="."]
enabled = true
zoom = Vector2(2.0, 2.0)

[connection signal="area_entered" from="AttackRange" to="." method="_on_attack_range_area_entered"]
[connection signal="area_exited" from="AttackRange" to="." method="_on_attack_range_area_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="timeout" from="AbilityCooldowns/Ability1Timer" to="." method="_on_ability_1_timer_timeout"]
[connection signal="timeout" from="AbilityCooldowns/Ability2Timer" to="." method="_on_ability_2_timer_timeout"]
[connection signal="timeout" from="AbilityCooldowns/Ability3Timer" to="." method="_on_ability_3_timer_timeout"]
[connection signal="timeout" from="AbilityCooldowns/DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="StateManager/InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"] 